sap project description insights

--- a/project/sap/index.html
+++ b/project/sap/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="As a part of an initiative to integrate user research into SAP&#39;s design process, examined users&#39; data comparison habits">
+  <meta name="description" content="As an initiative to integrate user research into SAP&#39;s design process, examined users&#39; data comparison habits">
 
   
   <link rel="alternate" hreflang="en-us" href="https://jinjeon.me/project/sap/">
@@ -112,7 +112,7 @@
   <meta property="og:site_name" content="Jin Jeon">
   <meta property="og:url" content="https://jinjeon.me/project/sap/">
   <meta property="og:title" content="Generative research in sourcing data comparison (NDA) | Jin Jeon">
-  <meta property="og:description" content="As a part of an initiative to integrate user research into SAP&#39;s design process, examined users&#39; data comparison habits"><meta property="og:image" content="https://jinjeon.me/project/sap/featured.png">
+  <meta property="og:description" content="As an initiative to integrate user research into SAP&#39;s design process, examined users&#39; data comparison habits"><meta property="og:image" content="https://jinjeon.me/project/sap/featured.png">
   <meta property="twitter:image" content="https://jinjeon.me/project/sap/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -166,7 +166,7 @@
       "url": "https://jinjeon.me/img/icon.png"
     }
   },
-  "description": "As a part of an initiative to integrate user research into SAP's design process, examined users' data comparison habits"
+  "description": "As an initiative to integrate user research into SAP's design process, examined users' data comparison habits"
 }
 </script>
 
@@ -552,7 +552,12 @@
 
 <h2 id="h-style-font-family-georgia-overview-h"><h style="font-family:georgia"> Overview </h></h2>
 
-<p>SAP provides various products and software for enterprise resource planning. <mark><strong>In order to deliver consistent and coherent user experience across SAP products, this project was an initiative to integrate user research into the design process so that design decisions were informed and inspired by user data</strong></mark>. As a starting point, the research focused on comparison patterns in sourcing product domain.</p>
+<h3 id="problem-space">Problem Space:</h3>
+
+<p>Because SAP provided vast variety of products and software for enterprise resource planning, there was a lack of consistency in UI throughout the different products. Each UX team working on its own product resulted in incoherent design systems that only amplified confusion to the end users.</p>
+
+<p><mark><strong>In order to deliver consistent and coherent user experience across SAP products, I collaborated with the UX framework team to establish design principles in UX pattern library.
+This project was also an initiative to integrate user research into the design process so that design decisions were informed and inspired by user data.</strong></mark> As a starting point, the research focused on comparison patterns in sourcing product domain.</p>
 
 <p><strong><em>Disclaimer:</strong> Due to NDA, the page primarily highlights the research process, decision making, reasoning and generalized outcomes.</em></p>
 
@@ -567,9 +572,11 @@
 <h2 id="h-style-font-family-georgia-impact-h"><h style="font-family:georgia"> Impact </h></h2>
 
 <ul>
+<li><strong>Provided high-level recommendations</strong> to address major user needs and pain points to stakeholders involving UX framework team, sourcing product team, procurement organization, PM, and dev team.</li>
+<li><strong>Set the foundation</strong> for the next step of research that involves ideation and concept testing.</li>
+<li><strong>Established user-data driven design principles</strong> for data comparison framework.</li>
+<li><strong>Evangelized the user research process</strong> by constantly involving stakeholders in regular meetings, user interviews, and collaborative workshops.</li>
 <li><strong>Validated</strong> major research findings that matched with previous research.</li>
-<li><strong>Provided high-level recommendations</strong> to address major pain points to stakeholders involving UX framework team, sourcing product team, procurement organization, PM, and dev team.</li>
-<li><strong>Set the foundation</strong> for the next stage of the design process which involves ideation and concept testing.</li>
 </ul>
 
 <h2 id="h-style-font-family-georgia-research-questions-h"><h style="font-family:georgia"> Research Questions </h></h2>
@@ -620,10 +627,9 @@
 <h3 id="goals">Goals:</h3>
 
 <ul>
-<li>To first better understand the product space in procurement and sourcing</li>
-<li>To understand what has been done in the past to avoid overlapping work</li>
-<li>Identify knowledge gaps</li>
-<li>Use the preliminary research findings as a guide for designing preliminary research</li>
+<li>To first understand the product space in procurement and sourcing</li>
+<li>Use the preliminary research findings as a <strong>guide for designing preliminary research</strong></li>
+<li>To explore what has been done in the past to avoid overlapping work</li>
 </ul>
 
 <h3 id="at-a-glance-intentionally-not-readable">At a Glance (Intentionally not readable):</h3>
@@ -644,14 +650,14 @@
 <figure>
 
 
-  <a data-fancybox="" href="preliminary-research.png" data-caption="Using FigJam, I visually laid out findings from past research.  The white empty spaces indicated potential knowledge gaps.">
+  <a data-fancybox="" href="preliminary-research.png" data-caption="Using FigJam, I visually laid out findings from examining 5&#43; past research work.  The white empty spaces indicated potential knowledge gaps.">
 <img src="preliminary-research.png" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    Using FigJam, I visually laid out findings from past research. <br> <strong>The white empty spaces indicated potential knowledge gaps.</strong>
+    Using FigJam, I visually laid out findings from examining 5+ past research work. <br> <strong>The white empty spaces indicated potential knowledge gaps.</strong>
   </figcaption>
 
 
@@ -661,18 +667,13 @@
 <h3 id="outcomes">Outcomes:</h3>
 
 <ul>
-<li>Examined 5+ past research work and findings, and <strong>organized into an affinity map to identify knowledge gaps.</strong></li>
-<li>Studies were from 2018-2019, involving evaluative research, testing design iterations and concepts. <strong>Because past work all dealt with specific design concepts and evaluative research, it was difficult to generalize findings across different studies.</strong></li>
-<li>Lot of data was missing or not as well organized.</li>
+<li>Identified knowledge gaps and lack of understanding of end-users <strong>because all of the past work were evaluative research focusing on specific design concepts and usability studies.</strong></li>
+<li>Pivoted the focus of the study to establish stakeholders&rsquo; better understanding of the users.
+
+<ul>
+<li><strong>In order to inform future design decisions, the primary user research was designed to focus on foundational research to understand users&rsquo; needs, behaviors, pain points, and typical use cases in their sourcing workflow.</strong></li>
+</ul></li>
 </ul>
-
-<h3 id="insights">Insights:</h3>
-
-<ol>
-<li><p>Preliminary research revealed the knowledge gaps and how past work has been mainly focused on testing design iterations with lack of understanding of the users.</p></li>
-
-<li><p>In order to inform future design decisions, the primary user research was designed to focus on foundational research to understand users&rsquo; needs, behaviors, pain points, and typical use cases in their sourcing workflow.</p></li>
-</ol>
 
 <hr />
 
@@ -800,7 +801,7 @@
 
 <ul>
 <li>Each sticky was broken down by corresponding themes.</li>
-<li>Visually laying out the participants&rsquo; sourcing workflow from start to end helped understand the journey of each participant.</li>
+<li><strong>Visually laying out the participants&rsquo; sourcing workflow from start to end helped understand the journey of each participant.</strong></li>
 <li>I was able to identify emerging patterns, characterizing behaviors, needs, and major paint points at each touchpoint in the journey.</li>
 </ul>
 
@@ -832,7 +833,8 @@
 
 <ul>
 <li>Over two days, my supervisor/mentor and I facilitated data synthesis workshops to onboard stakeholders with the research findings. In order to make the data more digestible, I made sure the data was organized and presented concisely.</li>
-<li>Through affinity mapping, we had two groups of stakeholders move stickies by topics and discuss emerging patterns.</li>
+<li>For every stakeholder to participate, we broke into two groups: one group discussed about the findings at high level, and the other group (which I moderated) was focused on detailed step-by-step of data comparison workflow.</li>
+<li>After group affinity diagramming, we discussed and presented emerging themes and patterns to each group.</li>
 </ul>
 
 <hr />
@@ -897,7 +899,7 @@
 <ol>
 <li><p>None of the participants were able to share their interactions in the e-procurement tools due to company compliance reasons. As the moderator of the interview sessions, it was my responsibility to maneuver and extract the information needed to address the research questions that have been set out.</p></li>
 
-<li><p>Because of time constraints, the scope of the project was focused on the &ldquo;buyer&rdquo; side of the procurement process. To have a better holistic understanding of the entire process, &ldquo;supplier&rdquo; side of research needs to be done.</p></li>
+<li><p>Because of time constraints, the scope of the project was focused on the &ldquo;buyer&rdquo; side of the procurement process. To have a better holistic understanding of the process, &ldquo;supplier&rdquo; side of research needs to be done.</p></li>
 </ol>
 
 <p><br></p>
