--- a/project/wa-notify/index.html
+++ b/project/wa-notify/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Task-based usability and AB testing on two versions of the COVID alert system in iOS and Android">
+  <meta name="description" content="Task-based, comparative usability study on the COVID alert systems in iOS and Android">
 
   
   <link rel="alternate" hreflang="en-us" href="https://jinjeon.me/project/wa-notify/">
@@ -112,7 +112,7 @@
   <meta property="og:site_name" content="Jin Jeon">
   <meta property="og:url" content="https://jinjeon.me/project/wa-notify/">
   <meta property="og:title" content="WA COVID Exposure Notification Usability Study | Jin Jeon">
-  <meta property="og:description" content="Task-based usability and AB testing on two versions of the COVID alert system in iOS and Android"><meta property="og:image" content="https://jinjeon.me/project/wa-notify/featured.png">
+  <meta property="og:description" content="Task-based, comparative usability study on the COVID alert systems in iOS and Android"><meta property="og:image" content="https://jinjeon.me/project/wa-notify/featured.png">
   <meta property="twitter:image" content="https://jinjeon.me/project/wa-notify/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -166,7 +166,7 @@
       "url": "https://jinjeon.me/img/icon.png"
     }
   },
-  "description": "Task-based usability and AB testing on two versions of the COVID alert system in iOS and Android"
+  "description": "Task-based, comparative usability study on the COVID alert systems in iOS and Android"
 }
 </script>
 
@@ -645,14 +645,14 @@
 <figure>
 
 
-  <a data-fancybox="" href="userflow.png" data-caption="The team initially visually laid out the user flow for each OS. The overall steps were broken down into three parts: onboarding, receiving alerts, and entering the verification code for positive COVID test results.">
+  <a data-fancybox="" href="userflow.png" data-caption="The team initially laid out the user flow visually for each OS. The overall steps were broken down into three parts: onboarding, receiving alerts, and entering the verification code for positive COVID test results.">
 <img src="userflow.png" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    The team initially visually laid out the user flow for each OS. The overall steps were broken down into three parts: onboarding, receiving alerts, and entering the verification code for positive COVID test results.
+    The team initially laid out the user flow visually for each OS. The overall steps were broken down into three parts: onboarding, receiving alerts, and entering the verification code for positive COVID test results.
   </figcaption>
 
 
