--- a/project/wa-notify/index.html
+++ b/project/wa-notify/index.html
@@ -1022,6 +1022,8 @@
   
   <a class="badge badge-light" href="/tags/research/">research</a>
   
+  <a class="badge badge-light" href="/tags/evaluative-research/">evaluative-research</a>
+  
   <a class="badge badge-light" href="/tags/usability-testing/">usability-testing</a>
   
   <a class="badge badge-light" href="/tags/qualitative-interviews/">qualitative-interviews</a>
