--- a/project/sap/index.html
+++ b/project/sap/index.html
@@ -527,7 +527,7 @@
 <p><body style="font-family:Arial; font-size: 12pt">
 <div class="introduction">
 <b><h style="font-family:georgia">My Role:</h></b>
-<br><small>UX researcher owning the comparison pattern research project </small><br><br></p>
+<br><small>UX researcher in a team of product manager, researcher, and<br> UX designers </small><br><br></p>
 
 <p><b><h style="font-family:georgia">Methods:</h></b>
 <br><small><strong>Contextual inquiries</strong>, <strong>journey maps</strong>, collaborative workshop facilitation, generative research, preliminary research </small><br><br></p>
