--- a/project/sap/index.html
+++ b/project/sap/index.html
@@ -527,7 +527,7 @@
 <p><body style="font-family:Arial; font-size: 12pt">
 <div class="introduction">
 <b><h style="font-family:georgia">My Role:</h></b>
-<br><small>UX researcher in a team of product manager, researcher, and<br> UX designers </small><br><br></p>
+<br><small>UX researcher in a cross-functional team of product manager, researcher, and UX designers </small><br><br></p>
 
 <p><b><h style="font-family:georgia">Methods:</h></b>
 <br><small><strong>Contextual inquiries</strong>, <strong>journey maps</strong>, collaborative workshop facilitation, generative research, preliminary research </small><br><br></p>
@@ -545,10 +545,10 @@
 
 <h3 id="problem-space">Problem Space:</h3>
 
-<p>Because SAP provided vast variety of products and software for enterprise resource planning, there was a lack of consistency in UI throughout the different products. Each UX team working on its own product resulted in incoherent design systems that only amplified confusion to the end users.</p>
+<p>While SAP provided vast variety of products and software for enterprise resource planning, there was a lack of UI consistency throughout its different products. <mark><strong>In order to deliver consistent and coherent user experience across SAP products, I collaborated with the UX framework team to establish design principles for the UX pattern library.</strong></mark></p>
 
-<p><mark><strong>In order to deliver consistent and coherent user experience across SAP products, I collaborated with the UX framework team to establish design principles in UX pattern library.
-This project was also an initiative to integrate user research into the design process so that design decisions were informed and inspired by user data.</strong></mark> As a starting point, the research focused on comparison patterns in sourcing product domain.</p>
+<!-- The scope of the project focused on understanding how procurement experts analyze their data. As their main work responsibilities involved comparing data with hundreds of rows and columns, the objective was to understand their start to end journey of comparing data: From getting the data to drilling down to make sense of data and
+ load data, drill-down.  -->
 
 <p><strong><em>Disclaimer:</strong> Due to NDA, the page primarily highlights the research process, decision making, reasoning and generalized outcomes.</em></p>
 
@@ -560,6 +560,8 @@ This project was also an initiative to integrate user research into the design p
 <li>Serve research findings to better <strong>inform design decisions</strong> in building comparison pattern.</li>
 </ul>
 
+<p><br></p>
+
 <h2 id="h-style-font-family-georgia-impact-h"><h style="font-family:georgia"> Impact </h></h2>
 
 <ul>
@@ -570,12 +572,16 @@ This project was also an initiative to integrate user research into the design p
 <li><strong>Validated</strong> major research findings that matched with previous research.</li>
 </ul>
 
+<p><br></p>
+
 <h2 id="h-style-font-family-georgia-research-questions-h"><h style="font-family:georgia"> Research Questions </h></h2>
 
 <blockquote>
 <p><p style="font-size: 16pt"><mark><em>&ldquo;What are the different use cases that involve comparing data in sourcing?&rdquo;<br><br>
 <mark<em>&ldquo;How does typical workflow look like, and what are the needs and pain points at each touchpoint?&rdquo;</em></mark><br><br></p>
 </blockquote>
+
+<p><br></p>
 
 <h2 id="h-style-font-family-georgia-high-level-research-process-h"><h style="font-family:georgia"> High Level Research Process </h></h2>
 
